--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <header
       style="
-        background-image: url(/navbar/bodypic.png);
+        background-image: url(./navbar/bodypic.png);
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -66,7 +66,7 @@
         <div class=" h-[90px]">
           <div class="container">
             <div class="flex flex-row w-auto    justify-between py-[10px]">
-              <img src="/navbar/logo.png" class="w-[100px] h-[52px]" alt="" />
+              <img src="./navbar/logo.png" class="w-[100px] h-[52px]" alt="" />
               <ul class="flex flex-row gap-x-8 items-center text-white">
                 <li class="text-lg font-[590] leading-[152%] hover text-white hover:text-[#89CE14]">
                   <a href="#">Home</a>
@@ -187,36 +187,36 @@
       </div>
       <div class="grid lg:grid-cols-7 sm:grid-cols-1 gap-6 h-auto w-auto py-[20px] gap-x-7">
         <div class="p-3 bg-[#EAEAEA] text-center rounded-[10px]">
-          <img src="/brandlogo/1st.png" class="mx-auto" alt="" />
+          <img src="./brandlogo/1st.png" class="mx-auto" alt="" />
           <h4 class="text-[#606060] text-[24px] font-[500] leading-[150%]">Babymel</h4>
         </div>
         <div class="p-3 bg-[#EAEAEA] text-center rounded-[10px]">
-          <img src="/brandlogo/2nd.png" class="mx-auto" alt="" />
+          <img src="./brandlogo/2nd.png" class="mx-auto" alt="" />
           <h4 class="text-[#606060] text-[24px] font-[500] leading-[150%]">Burberry</h4>
         </div>
 
         <div class="p-3 bg-[#EAEAEA] text-center rounded-[10px]">
-          <img src="/brandlogo/3rd.png" class="mx-auto" alt="" />
+          <img src="./brandlogo/3rd.png" class="mx-auto" alt="" />
           <h4 class="text-[#606060] text-[24px] font-[500] leading-[150%]">Camper</h4>
         </div>
 
         <div class="p-3 bg-[#EAEAEA] text-center rounded-[10px]">
-          <img src="/brandlogo/4th.png" class="mx-auto" alt="" />
+          <img src="./brandlogo/4th.png" class="mx-auto" alt="" />
           <h4 class="text-[#606060] text-[24px] font-[500] leading-[150%]">Chanel</h4>
         </div>
 
         <div class="p-3 bg-[#EAEAEA] text-center rounded-[10px]">
-          <img src="/brandlogo/5th.png" class="mx-auto" alt="" />
+          <img src="./brandlogo/5th.png" class="mx-auto" alt="" />
           <h4 class="text-[#606060] text-[24px] font-[500] leading-[150%]">Fila</h4>
         </div>
 
         <div class="p-3 bg-[#EAEAEA] text-center rounded-[10px]">
-          <img src="/brandlogo/6th.png" class="mx-auto" alt="" />
+          <img src="./brandlogo/6th.png" class="mx-auto" alt="" />
           <h4 class="text-[#606060] text-[24px] font-[500] leading-[150%]">Puma</h4>
         </div>
 
         <div class="p-3 bg-[#EAEAEA] text-center rounded-[10px]">
-          <img src="/brandlogo/7th.png" class="mx-auto" alt="" />
+          <img src="./brandlogo/7th.png" class="mx-auto" alt="" />
           <h4 class="text-[#606060] text-[24px] font-[500] leading-[150%]">Adidas</h4>
         </div>
       </div>
@@ -238,7 +238,7 @@
 
         <div class="flex flex-row mt-[30px] gap-x-20">
           <div class="p-2 bg-[#EAEAEA] text-center rounded-[10px] w-[312px] h-[205.39px]">
-            <img src="/iconelogo/1st.png" class="w-10 h-10 mx-auto mt-[10px]" alt="" />
+            <img src="./iconelogo/1st.png" class="w-10 h-10 mx-auto mt-[10px]" alt="" />
             <h4 class="text-[20px] font-[500] py-1 text-font-primary leading-[130%]">
               Package Consolidation
             </h4>
@@ -248,7 +248,7 @@
             </p>
           </div>
           <div class="p-2 bg-[#EAEAEA] text-center rounded-[10px] w-[312px] h-[205.39px]">
-            <img src="/iconelogo/2nd.png" class="w-10 h-10 mx-auto mt-[10px]" alt="" />
+            <img src="./iconelogo/2nd.png" class="w-10 h-10 mx-auto mt-[10px]" alt="" />
             <h4 class="text-[20px] font-[500] py-1 text-font-primary leading-[130%]">
               Security & Reliability
             </h4>
@@ -258,7 +258,7 @@
             </p>
           </div>
           <div class="p-2 bg-[#EAEAEA] text-center rounded-[10px] w-[312px] h-[205.39px]">
-            <img src="/iconelogo/3rd.png" class="w-10 h-10 mx-auto mt-[10px]" alt="" />
+            <img src="./iconelogo/3rd.png" class="w-10 h-10 mx-auto mt-[10px]" alt="" />
             <h4 class="text-[20px] font-[500] py-1 text-font-primary leading-[130%]">
               Real-time Tracking
             </h4>
@@ -295,7 +295,7 @@
       <div class="relative">
         <div class="pt-[60px] flex flex-col gap-7">
           <div class="w-full flex items-center gap-5 p-5 border-b-[0.5px] border-[#C0C0C0]">
-            <img src="/number/image.png" class="w-[100px] h-[100px]" alt="" />
+            <img src="./number/image.png" class="w-[100px] h-[100px]" alt="" />
             <div class="pb-2">
               <h4
                 class="text-[32px] text-second-black hover:text-[#5ba65c] font-bold leading-[150%]"
@@ -310,7 +310,7 @@
             </div>
           </div>
           <div class="w-full flex items-center gap-5 p-5 border-b-[0.5px] border-[#C0C0C0]">
-            <img src="/number/2nd.png" class="w-[100px] h-[100px]" alt="" />
+            <img src="./number/2nd.png" class="w-[100px] h-[100px]" alt="" />
             <div class="pb-2">
               <h4
                 class="text-[32px] text-second-black hover:text-[#5ba65c] font-bold leading-[150%]"
@@ -325,7 +325,7 @@
             </div>
           </div>
           <div class="w-full flex items-center gap-5 p-5 border-b-[0.5px] border-[#C0C0C0]">
-            <img src="/number/3rd.png" class="w-[100px] h-[100px]" alt="" />
+            <img src="./number/3rd.png" class="w-[100px] h-[100px]" alt="" />
             <div class="pb-2">
               <h4
                 class="text-[32px] text-second-black hover:text-[#5ba65c] font-bold leading-[150%]"
@@ -340,7 +340,7 @@
             </div>
           </div>
           <div class="w-full flex items-center gap-5 p-5 border-b-[0.5px] border-[#C0C0C0]">
-            <img src="/number/4th.png" class="w-[100px] h-[100px]" alt="" />
+            <img src="./number/4th.png" class="w-[100px] h-[100px]" alt="" />
             <div class="pb-2">
               <h4
                 class="text-[32px] text-second-black hover:text-[#5ba65c] font-bold leading-[150%]"
@@ -892,7 +892,7 @@
       <div class="container">
         <div class="flex flex-row py-[25px] gap-x-20">
           <div class="w-1/3">
-            <img src="/navbar/logo.png" alt="" />
+            <img src=".navbar/logo.png" alt="" />
             <p class="text-[16px] text-[#FFFFFF] max-w-[449px] py-[5px] pb-[30px] leading-[150%]">
               Lorem ipsum dolor sit amet consectetur. Neque consequat tristique bibendum facilisis
               odio congue enim. Tempor justo proin faucibus praesent ac. Dui nunc sit aliquam eget
